@startuml

title __CDIO3's Class Diagram__\n

  namespace GUI {
    class GUI.ColorConverter {
    }
  }
  

  namespace GUI {
    class GUI.GUIMain {
    }
  }
  

  namespace GUI {
    class GUI.PopupBox {
    }
  }
  

  namespace Game {
    class Game.Account {
    }
  }
  

  namespace Game {
    class Game.Board {
    }
  }
  

  namespace Game {
    class Game.Chancekort {
    }
  }
  

  namespace Game {
    class Game.Die {
    }
  }
  

  namespace Game {
    class Game.Field {
    }
  }
  

  namespace Game {
    class Game.GameHandler {
    }
  }
  

  namespace Game {
    class Game.Main {
    }
  }
  

  namespace Game {
    class Game.Player {
    }
  }
  

  namespace Game {
    class Game.Rafflecup {
    }
  }
  

  namespace Game {
    class Game.Settings {
    }
  }
  

  namespace Game {
    class Game.TXTReader {
    }
  }
  

  namespace Game {
    class Game.playermoney {
    }
  }
  

  namespace Game {
    class Game.testmain {
    }
  }
  

  GUI.GUIMain -up-|> javax.swing.JPanel
  Game.Field o-- Game.Field.fieldType : fType
  Game.Field o-- Game.Player : owner
  Game.Player o-- Game.Account : playerAccount


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
